--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="card">
+		<img id="image" src="https://media.istockphoto.com/id/1170896292/photo/heart-of-autumn-yellow-orange-trees-in-forest-with-heart-shape-sunny-weather-good-day.jpg?s=2048x2048&w=is&k=20&c=dCYPxV3DCDhWHE0tcdztlrcQMBxGVooaE-kHwFz5cvo=">
+		<h1 id="title">Pricing card</h1>
+		<p id="para">Price: Rs.200</p>
+		<p id="para-1">description: of the product or service, also enclosed within a paragraph tag.</p>
+		<button id="btn">Buy Now</button>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
